apps/application-boilerplate.konker.dev/backend/deployment/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-boilerplatedotkonkerdotdev
spec:
  selector:
    app: application-boilerplatedotkonkerdotdev
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
