apps/application-boilerplate.konker.dev/backend/deployment/kubernetes/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: application-boilerplatedotkonkerdotdev
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`api.application-boilerplate.development.konker.dev`)
      kind: Rule
      services:
        - name: application-boilerplatedotkonkerdotdev
          port: 3000
  tls:
    certResolver: letsencrypt
